--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,46 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="container">
+  <div class="row">
+    <div class="Absolute-Center is-Responsive">
+      <h1 class="page-header text-center">Your Profile</h1>
+      <% if user_signed_in? %>
+        <center style="padding: 10px;"><%= image_tag current_user.gravatar_url(:size => 100), :class => "img-circle avatar" %></center>        
+      <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+
+      <div id="logo-container"></div>
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+       <form action="" id="loginForm">
+          <%= f.label :email %><br />
+          <div class="form-group input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+            <%= f.email_field :email, :class => "form-control",  autocomplete: "off" %>
+          </div>
+          <%= f.label :password %><br />
+          <div class="form-group input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-cog"></i></span>
+            <%= f.password_field :password, :class => "form-control",  autocomplete: "off" %>
+          </div>
+          <%= f.label :password_confirmation %><br />
+          <div class="form-group input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-cog"></i></span>
+            <%= f.password_field :password_confirmation, :class => "form-control",  autocomplete: "off" %>
+          </div>
+          <%= f.label :current_password %><br />
+          <div class="form-group input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-cog"></i></span>
+            <%= f.password_field :current_password, :class => "form-control", autocomplete: "off" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "Update Account", :class => "btn btn-danger btn-block btn-lg" %>
+            
+           <center style="padding: 10px;"><%= link_to "Cancel Update", :back, :class => "btn btn-info btn-lg" %></center>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
+</div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
