--- a/app/views/forum_posts/_forum_post.html.erb
+++ b/app/views/forum_posts/_forum_post.html.erb
@@ -2,6 +2,7 @@
 <div class="pull-avatar-left" style="padding-right: 10px; padding-bottom: 10px; margin-top: 20px; margin-left: 45px;"><%= image_tag forum_post.user.gravatar_url(:size => 55), :class => "img-circle avatar" %></div>
 <div class="forum-post-container" style="margin-top: 20px; margin-left: 120px; padding-bottom: 10px;">
 <p class="text-muted">Posted by <%= forum_post.user.username %>  <%= local_time_ago forum_post.created_at %>  
+<% if user_signed_in? %>
 <% if current_user.admin %>
   <%= link_to edit_forum_thread_forum_post_path(@forum_thread, forum_post), class: "btn btn-info btn-xs" do  %>
     <span class="glyphicon glyphicon-pencil"></span>
@@ -12,7 +13,7 @@
     <span class="glyphicon glyphicon-remove"></span>
   <% end %>
 <% end %>
-
+<% end %>
 </p>
   <p><%= markdownify forum_post.body %></p>
 </div>
